testing/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-test-service
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: nginx
