testing/stateful.yaml
apiVersion: v1
kind: Service
metadata:
  name: stateful-nginx-test-service
  labels:
    app: stateful-nginx
spec:
  ports:
    - port: 80
      name: http
  clusterIP: None
  selector:
    app: stateful-nginx
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: stateful-nginx
spec:
  selector:
    matchLabels:
      app: stateful-nginx
  serviceName: "stateful-nginx"
  replicas: 1 # by default is 1
  minReadySeconds: 10 # by default is 0
  template:
    metadata:
      labels:
        app: stateful-nginx
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: www
              mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
    - metadata:
        name: www
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "longhorn-sinaia"
        resources:
          requests:
            storage: 1Gi
